[gd_scene load_steps=2 format=2]

[ext_resource path="res://enemies/EnemySpawner.gd" type="Script" id=1]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="SpawnPoints"]
position = Vector2( 64, -832 )

[node name="Position2D3" type="Position2D" parent="SpawnPoints"]
position = Vector2( -832, -96 )

[node name="Position2D4" type="Position2D" parent="SpawnPoints"]
position = Vector2( 832, -320 )

[node name="Position2D2" type="Position2D" parent="SpawnPoints"]
position = Vector2( -608, 624 )
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
